test-auth/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-auth
spec:
  selector:
    app: test-auth
  ports:
    - port: 4181
      targetPort: 4181
  type: ClusterIP
