test-auth/k8s/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test-auth
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.gladeos.com`)
      kind: Rule
      services:
        - name: test-auth
          port: 4181
      middlewares:
        - name: default-headers
        - name: forward-auth
  tls:
    secretName: gladeos-com-tls #production
